# INVIMA-HematoOncologia

./: .gitignore  LICENSE  README.md  pyproject.toml  run_api.py  run_cli.py
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: indicationPatterns.json  main.tsx  styles.css
docs/: COMMERCIAL_LEGAL_NOTES.md  DATA_SOURCES.md  MEDICATION_QUEUE.md  PACLITAXEL_WORKFLOW.md  UI_CLINICAL_PRESENTATION_NOTES.md
scripts/: smoke_check.py
src/invima_tool/: __init__.py  api.py  cli.py  clinical_profiles.py  curated_regulatory.py  html_tables.py  invima_client.py  invima_parser.py  manual_parser.py  models.py  open_data_client.py  pospopuli_parser.py  reporting.py  storage.py  text.py  unirs_parser.py
tests/: test_api.py  test_parsers.py  test_reporting.py
